--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,3 +10,10 @@ services:
     stdin_open: true
     tty: true
     command: npm run serve
+  json-server:
+      build: ./json-server
+      ports:
+        - '3000:3000'
+      volumes: 
+        - .:/data/json-server
+      command: json-server --watch ./json-server/db.json --host 0.0.0.0
