--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.3.2",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-analytics": "^5.22.1",
     "vue-chartjs": "^3.5.0",
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
