--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "vue-class-component": "^7.0.2",
     "vue-property-decorator": "^8.3.0",
     "vue-router": "^3.1.3",
+    "vue-tweet-embed": "^2.4.0",
     "vue-youtube": "^1.4.0",
     "vuex": "^3.0.1"
   },
